@@ -1,10 +1,11 @@
-executor: cluster-generic
+executor: slurm
 jobs: 5
 default-resources:
-    time: 30
-    mem_per_cpu: 16000
-    cpu_per_task: 1
-    partition: "small"
+    runtime: 30
+    mem_mb: 16000
+    cpus_per_task: 1
+    slurm_partition: "small"
     slurm_account: "project_2010176"
-    nvme: 0
-cluster-generic-submit-cmd: "sbatch --time {resources.time} --account={resources.slurm_account} --gres=nvme:{resources.nvme} --job-name='{jobid}-{rule}' --tasks-per-node=1 --cpus-per-task={resources.cpu_per_task} --mem-per-cpu={resources.mem_per_cpu} --partition={resources.partition}"
+    gres: "'nvme:0'"
+
+
